--- a/public/index.html
+++ b/public/index.html
@@ -1,48 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+    <meta name="description" content="Digital Move Up is your leading digital marketing agency in Tunisia and beyond, specializing in tailored online strategies, multimedia content creation, impactful video production, and professional photography. We offer a full suite of services, including local and international SEO, PPC advertising, social media management, website design and redesign optimized for mobile, and conversion rate optimization (CRO). Our team of experts excels in SEO content writing, storytelling, graphic design, influencer marketing, email campaigns, and newsletter creation to elevate your brand, boost online visibility, and maximize return on investment (ROI). Additionally, we provide business development, digital audits, data analysis, marketing automation, and online reputation management for measurable and sustainable success. Partner with **Digital Move Up** to achieve your digital goals, enhance your online presence, and stay ahead of the competition both in Tunisia and globally.">
     <meta charset="utf-8" />
-    <link rel="icon" href="../src/media/logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="shortcut icon" href="../src/media/logo.ico" type="image/x-icon">
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="../src/media/logo.jpg" />
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="logo.ico" type="image/x-icon">
+
+    <!-- Apple Touch Icon -->
+    <link rel="apple-touch-icon" href="../src/media/logo (2).png" />
+
+    <!-- External CSS -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="css/tailus.css">
     <link href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400&display=swap" rel="stylesheet">
-  
-    <script src="https://cdn.tailwindcss.com"></script>
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- JavaScript -->
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YWEB5QZCLT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YWEB5QZCLT');
+</script>
+
+    <!-- Web Manifest -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <title>Digital MoveUp TN</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
